// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Organization Integration GET /organization should return 200 and list of organizations 1`] = `
[
  {
    "bannerUrl": null,
    "description": "UBC Okanagan",
    "googleAuthEnabled": true,
    "id": 1,
    "legacyAuthEnabled": false,
    "logoUrl": null,
    "name": "UBCO",
    "ssoEnabled": false,
    "ssoUrl": null,
    "websiteUrl": null,
  },
  {
    "bannerUrl": null,
    "description": "UBC Okanagan",
    "googleAuthEnabled": true,
    "id": 2,
    "legacyAuthEnabled": false,
    "logoUrl": null,
    "name": "UBCO",
    "ssoEnabled": false,
    "ssoUrl": null,
    "websiteUrl": null,
  },
]
`;

exports[`Organization Integration GET /organization/:oid should return 200 and response when user is logged in 1`] = `
{
  "bannerUrl": null,
  "description": "UBC Okanagan",
  "googleAuthEnabled": true,
  "id": 1,
  "legacyAuthEnabled": false,
  "logoUrl": null,
  "name": "UBCO",
  "ssoEnabled": false,
  "ssoUrl": null,
  "websiteUrl": null,
}
`;

exports[`Organization Integration GET /organization/:oid/get_courses/:page? should return 200 when user is an admin 1`] = `
[
  {
    "courseId": 1,
    "courseName": "CS 304",
  },
]
`;

exports[`Organization Integration GET /organization/:oid/get_user/:uid should return 200 when user is found 1`] = `
{
  "courses": [],
  "organizationId": 1,
  "organizationRole": "member",
  "user": {
    "accountDeactivated": false,
    "email": "user@ubc.ca",
    "firstName": "User",
    "fullName": "User Person",
    "globalRole": "user",
    "id": 2,
    "lastName": "Person",
    "photoUrl": null,
    "sid": null,
  },
}
`;

exports[`Organization Integration GET /organization/:oid/get_users/:page? should return 200 when user is an admin 1`] = `
[
  {
    "email": "user@ubc.ca",
    "firstName": "User",
    "lastName": "Person",
    "organizationRole": "admin",
    "photoUrl": null,
    "userId": 1,
    "userRole": "user",
  },
]
`;

exports[`Organization Integration GET /organization/:oid/stats should return 200 when user is an admin 1`] = `
{
  "courses": 1,
  "members": 2,
  "membersProfessors": 1,
}
`;
